[package]
name = "gat_os"
version = "0.1.0"
authors = ["ferbass <ferbass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.10"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[profile.test]
opt-level = 1 #add optimization for test profile

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
